--- a/proyecto_bloc/pubspec.yaml
+++ b/proyecto_bloc/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1  
   bloc: ^9.0.0
   equatable: ^2.0.7
   http: ^1.5.0
